# AI_Investment_OS

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  SETUP.md  config.txt  docker-compose.yml  start-local.bat  test.md  test2.md  test3.md  test4.md  test5.md  开发报告-Phase0.md  开发报告-Phase1.md  开发报告-Phase2.md  开发报告-Phase3.md  开发报告-Phase4.md  开发报告-Phase5.md  开发时间线.md  开发设计文档.md
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  test_agent.py  test_akshare.py  test_analysis.py  test_event.py  test_graph.py  test_llm.py  test_portfofio.py  test_websocket.py
backend/alembic/: env.py
backend/app/: config.py  database.py  init_db.py  main.py
backend/app/agents/: __init__.py  base.py  exceptions.py  finance.py  financial.py  judge.py  macro.py  models.py  news.py  planner.py  portfolio_agent.py  prompts.py  quant.py  report.py  risk.py  state.py  technical.py  workflow.py
backend/app/api/: agent.py  alerts.py  auth.py  deps.py  portfolio.py  stocks.py  workspace.py
backend/app/core/: auth.py  circuit_breaker.py  exceptions.py  logging.py  rate_limit.py  retry.py  security.py  task_manager.py
backend/app/engine/: graph.py  nodes.py
backend/data/: investment.db
backend/tests/: conftest.py  test_agent_schemas.py  test_agents.py  test_auth.py  test_cache.py  test_circuit_breaker.py  test_e2e.py  test_events.py  test_indicators.py  test_llm_adapter.py  test_models.py  test_news.py  test_portfolio.py  test_rate_limit.py  test_schemas.py  test_smoke.py  test_task_manager.py  test_websocket.py  test_workflow.py
(+194 files in other folders)
